<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addDialogView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#43464A"
        tools:context=".ui.AddDialogFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/cairo_semibold"
            android:text="Name: "
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/cairo_semibold"
            android:background="@drawable/edittext_border"
            android:hint="Name"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/cairo_semibold"
            android:text="Number: "
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberEd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_border"
            android:hint="Number"
            android:paddingStart="12dp"
            android:fontFamily="@font/cairo_semibold"
            android:paddingEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nameEd"
            app:layout_constraintTop_toTopOf="@+id/textView3" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/cairo_semibold"
            android:text="Address: "
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressEd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_border"
            android:hint="Address"
            android:paddingStart="12dp"
            android:fontFamily="@font/cairo_semibold"
            android:paddingEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nameEd"
            app:layout_constraintTop_toTopOf="@+id/textView4" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/cairo_semibold"
            android:backgroundTint="#2E3136"
            android:text="Add"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/addressEd"
            app:layout_constraintTop_toBottomOf="@+id/addressEd" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#2E3136"
            android:fontFamily="@font/cairo_semibold"
            android:text="Delete"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@+id/addressEd"
            app:layout_constraintTop_toBottomOf="@+id/addressEd" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressbar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
